# xl.github.io

./: 404.html  CNAME  atom.xml  index.html  readme.markdown  xl.cabal
about/: index.html
css/: screen.css
notes/: index.html
posts/360-search/: index.html
posts/continuation-based-thread-in-haskell/: index.html
posts/enterprise-market/: index.html
posts/io-and-monad/: index.html
posts/monad-purpose/: index.html
posts/postgres-storage-location/: index.html
posts/queens/: index.html
posts/simple_lz_compress/: index.html
posts/warp/: index.html
posts/you-need-to-get-phd/: index.html
provider/pages/: about.md
provider/posts/: 360-search.md  continuation-based-thread-in-haskell.md  enterprise-market.md  io-and-monad.md  monad-purpose.md  postgres-storage-location.md  queens.md  simple_lz_compress.md  warp.md  you-need-to-get-phd.md
provider/templates/: comments-js.html  layout.html
src/: Site.hs  deploy.sh
src/Site/: Fields.hs
tags/algorithm/: index.html
tags/db/: index.html
tags/fp/: index.html
tags/haskell/: index.html
tags/monad/: index.html
tags/network/: index.html
tags/oop/: index.html
tags/postgres/: index.html
tags/scheme/: index.html
