name:                xl
version:             0.1
synopsis:            Personal Site
-- description:
homepage:            http://veryr.com
license:             BSD3
author:              Linhua Lai
maintainer:          linhua.lai@gmail.com
-- copyright:
category:            Web
build-type:          Simple
cabal-version:       >=1.8

executable site
  main-is:           Site.hs
  hs-source-dirs:    src/
  ghc-options:       -O2 -Wall -threaded
  -- other-modules:
  build-depends:       base,
                       process      >= 1.1.0.2 && < 2,
                       cryptohash   >= 0.8.4   && < 1,
                       directory    >= 1.2.0.1 && < 2,
                       old-locale   >= 1.0.0.4 && < 2,
                       time         >= 1.4     && < 2,
                       blaze-html   >= 0.6.1.1 && < 1,
                       containers   >= 0.4.2.1 && < 1,
                       regex-tdfa   >= 1.1.8   && < 2,
                       pandoc       >= 1.12    && < 2,
                       pandoc-types >= 1.12    && < 2,
                       filepath     >= 1.3.0.0 && < 2,
                       bytestring   >= 0.9.2.1 && < 10,
                       hakyll       >= 4.2.2.0 && < 5
